[gd_scene load_steps=2 format=2]

[ext_resource path="res://engine/audio.gd" type="Script" id=1]

[node name="Audio" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -9.0

[node name="SoundPlayers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundPlayer1" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer2" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer3" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer4" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer5" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer6" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer7" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer8" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundLoopers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLooper1" type="AudioStreamPlayer" parent="SoundLoopers"]

[node name="SoundLooper2" type="AudioStreamPlayer" parent="SoundLoopers"]

[node name="MusicTween" type="Tween" parent="."]

[node name="MusicFadeOut" type="Tween" parent="."]

[node name="MusicFadeIn" type="Tween" parent="."]

[node name="Timers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayedTimer1" type="Timer" parent="Timers"]
one_shot = true
